# controller/merchantctr/tag.go
@@ -16,9 +16,11 @@ type TagCtr struct{}
 // @Description 添加标签
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.TagAddRequest                              true "参数"
+// @Param       param body     merchantmod.TagAddRequest                              true  "参数"
+// @param       hoken header   string                                                 false "hoken"
 // @Success     200   {object} response.HTTPResponse{Data=merchantmod.TagAddResponse} "成功"
-// @Failure     500   {object} response.HTTPResponse                                  "失败"
+// @Security    Auth
+// @Failure     500 {object} response.HTTPResponse "失败"
 // @Router      /v1/merchant/commodity/tag/add [post]
 func (TagCtr) Add(c context.MerchantContext) {
 	var r merchantmod.TagAddRequest
@@ -42,9 +44,11 @@ func (TagCtr) Add(c context.MerchantContext) {
 // @Description 删除标签
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.TagDelRequest                              true "参数"
+// @Param       param body     merchantmod.TagDelRequest                              true  "参数"
+// @param       hoken header   string                                                 false "hoken"
 // @Success     200   {object} response.HTTPResponse{Data=merchantmod.TagDelResponse} "成功"
-// @Failure     500   {object} response.HTTPResponse                                  "失败"
+// @Security    Auth
+// @Failure     500 {object} response.HTTPResponse "失败"
 // @Router      /v1/merchant/commodity/tag/del [post]
 func (TagCtr) Del(c context.MerchantContext) {
 	var r merchantmod.TagDelRequest
