# docs/mv1_swagger.json
@@ -1,25 +1,16 @@
-// Package docs GENERATED BY SWAG; DO NOT EDIT
-// This file was generated by swaggo/swag
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "title": "HaiXian 商户 API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:7777",
     "paths": {
         "/v1/merchant/auth/login": {
             "post": {
@@ -75,6 +66,11 @@ const docTemplate = `{
         },
         "/v1/merchant/auth/logout": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "商户注销",
                 "consumes": [
                     "application/json"
@@ -179,6 +175,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/add": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "添加商品",
                 "consumes": [
                     "application/json"
@@ -199,6 +200,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityAddRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -231,6 +238,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/del": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "删除商品",
                 "consumes": [
                     "application/json"
@@ -251,6 +263,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityDelRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -283,6 +301,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/hide": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "商品隐藏后，用户不可见",
                 "consumes": [
                     "application/json"
@@ -303,6 +326,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityHideRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -335,6 +364,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/list": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "商品列表",
                 "consumes": [
                     "application/json"
@@ -355,6 +389,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityListRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -387,6 +427,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/modify": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "编辑商品",
                 "consumes": [
                     "application/json"
@@ -407,6 +452,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityModifyRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -439,6 +490,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/publish": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "商品发布后，用户可见",
                 "consumes": [
                     "application/json"
@@ -459,6 +515,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.CommodityPublishRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -491,6 +553,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/sp/add": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "添加商品规格与定价",
                 "consumes": [
                     "application/json"
@@ -511,6 +578,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.SPAddRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -543,6 +616,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/sp/del": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "删除商品规格与定价，每个商品至少保留一项",
                 "consumes": [
                     "application/json"
@@ -595,6 +673,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/sp/modify": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "编辑商品规格与定价",
                 "consumes": [
                     "application/json"
@@ -615,6 +698,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.SPModifyRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -647,6 +736,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/tag/add": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "添加标签",
                 "consumes": [
                     "application/json"
@@ -667,6 +761,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.TagAddRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -699,6 +799,11 @@ const docTemplate = `{
         },
         "/v1/merchant/commodity/tag/del": {
             "post": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
                 "description": "删除标签",
                 "consumes": [
                     "application/json"
@@ -719,6 +824,12 @@ const docTemplate = `{
                         "schema": {
                             "$ref": "#/definitions/merchantmod.TagDelRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "hoken",
+                        "name": "hoken",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -742,65 +853,6 @@ const docTemplate = `{
                     },
                     "500": {
                         "description": "失败",
-                        "schema": {
-                            "$ref": "#/definitions/response.HTTPResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/user/home/list/{xx_merchant}": {
-            "post": {
-                "description": "首页核心接口，展示商品列表",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户-首页"
-                ],
-                "summary": "商品列表",
-                "parameters": [
-                    {
-                        "description": "参数",
-                        "name": "param",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/usermod.HomeListRequest"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Merchant Name",
-                        "name": "xx_merchant",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "成功",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.HTTPResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "Data": {
-                                            "$ref": "#/definitions/usermod.HomeListResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "500": {
-                        "description": "请求失败",
                         "schema": {
                             "$ref": "#/definitions/response.HTTPResponse"
                         }
@@ -1171,6 +1223,15 @@ const docTemplate = `{
                 "specifications"
             ],
             "properties": {
+                "choiceOpt": {
+                    "description": "ChoiceOpt 选择设置 0:单选；1:多选；2:必选",
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1,
+                        2
+                    ]
+                },
                 "id": {
                     "description": "Id 规格和定价id",
                     "type": "string"
@@ -1192,7 +1253,6 @@ const docTemplate = `{
         "merchantmod.SPAddRequest": {
             "type": "object",
             "required": [
-                "choiceOpt",
                 "commodityId",
                 "pricing",
                 "specifications"
@@ -1370,121 +1430,13 @@ const docTemplate = `{
                     ]
                 }
             }
-        },
-        "usermod.Commodity": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "invaild": {
-                    "description": "true: 无效,不可选。否则可选",
-                    "type": "boolean"
-                },
-                "invaildMsg": {
-                    "description": "失效信息",
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "picURL": {
-                    "type": "string"
-                },
-                "sps": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/usermod.SP"
-                    }
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/usermod.Tag"
-                    }
-                }
-            }
-        },
-        "usermod.HomeListRequest": {
-            "type": "object",
-            "required": [
-                "pageNumber",
-                "pageSize"
-            ],
-            "properties": {
-                "pageNumber": {
-                    "description": "Limit (min 1)",
-                    "type": "integer",
-                    "minimum": 1
-                },
-                "pageSize": {
-                    "description": "Limit (min 1,max 20)",
-                    "type": "integer",
-                    "maximum": 20,
-                    "minimum": 1
-                }
-            }
-        },
-        "usermod.HomeListResponse": {
-            "type": "object",
-            "properties": {
-                "hasNext": {
-                    "type": "boolean"
-                },
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/usermod.Commodity"
-                    }
-                }
-            }
-        },
-        "usermod.SP": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "md5": {
-                    "type": "string"
-                },
-                "pricing": {
-                    "type": "number"
-                },
-                "selected": {
-                    "type": "boolean"
-                },
-                "specifications": {
-                    "type": "string"
-                }
-            }
-        },
-        "usermod.Tag": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
+        }
+    },
+    "securityDefinitions": {
+        "Auth": {
+            "type": "apiKey",
+            "name": "hoken",
+            "in": "header"
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:7777",
-	BasePath:         "",
-	Schemes:          []string{},
-	Title:            "HaiXian API",
-	Description:      "",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
